# PlacementPipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LIVE_TEST_RESULTS.md  README.md  TEST_RESULTS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_endpoints.py
.github/workflows/: placement-pipeline-AutoDeployTrigger-542459eb-4390-4972-b206-3a5339077c6e.yml
app/: database.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  debug.py  drives.py  gmail_events.py  gmail_watch.py
app/models/: __init__.py  email.py  placement_drive.py  sync_state.py
app/services/: db_service.py  email_extractor.py  email_pipeline.py  gemini_extractor.py  gmail_service.py  langgraph_pipeline.py  regex_extractor.py  text_cleaner.py
tests/: test_endpoints.py
