[project]
name = "placement-pipeline"
version = "1.0.0"
description = "Real-time campus placement intelligence system using LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Priyanshu Kumar Anand", email = "priyanshukumaranand@gmail.com"}
]
keywords = ["fastapi", "langgraph", "gmail", "placement", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Priyanshukumaranand/PlacementPipeline"
Repository = "https://github.com/Priyanshukumaranand/PlacementPipeline.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
